new generate link and delete meeting
